<resources>
    <string name="app_name">Notification</string>
    
    <string name="notif_title">Dominando o Android</string>
    <string name="notif_text">Essa é uma notificação</string>
    <string name="notif_big_message">Esse é um exemplo de notificação com um texto grande, mas que caberá devido ao estilo</string>
    <string name="notif_button_action">Ação</string>
    <string name="notif_reply_label">Ação</string>
    <string name="notif_reply_hint">Digite a mensagem</string>
    <string name="notif_reply_replied">Respondido!</string>
    <string name="notif_channel_name">Padrão</string>
    <string name="notif_channel_description">Canal padrão de notificações</string>
    <string name="notif_channel_urgent_name">Urgente</string>
    <string name="notif_big_inbox_title">Mensagens não lidas</string>
    <string name="notif_big_inbox_message">Mensagem %1$d</string>
    <string name="notif_big_inbox_summary">Clique para exibir</string>
    <string name="btn_simple_label">Simples</string>
    <string name="btn_tp_action_label">Tap Action</string>
    <string name="btn_big_text_label">Big Text</string>
    <string name="btn_action_button_label">Button Action</string>
    <string name="btn_direct_reply_label">Direct Reply</string>
    <string name="btn_inbox_label">Inbox</string>
    <string name="btn_heads_up_label">Heads Up</string>
</resources>