<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/btnSimple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_simple_label" />

    <Button
        android:id="@+id/btnTapAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_tp_action_label" />

    <Button
        android:id="@+id/btnBigText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_big_text_label" />

    <Button
        android:id="@+id/btnActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_action_button_label" />

    <Button
        android:id="@+id/btnDirectReply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_direct_reply_label" />

    <Button
        android:id="@+id/btnInbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_inbox_label" />

    <Button
        android:id="@+id/btnHeadsUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_heads_up_label" />


</LinearLayout>